# app/Http/Controllers/ChannelController.php
@@ -20,7 +20,8 @@ class ChannelController extends Controller
         *     tags={"Channels"},
         *      @OA\Response(
         *          response=200,
-        *          description="Successful operation, Returns a list of Books in JSON format"
+        *          description="Successful operation, Returns a list of Books in JSON format",
+        *          @OA\JsonContent(ref="#/components/schemas/Channel")  
         *       ),
         *      @OA\Response(
         *          response=401,
@@ -59,7 +60,8 @@ class ChannelController extends Controller
      *          ),
         *      @OA\Response(
         *          response=200,
-        *          description="Successful operation"
+        *          description="Successful operation",
+        *          @OA\JsonContent(ref="#/components/schemas/youtube_video")
         *       ),
         *      @OA\Response(
         *          response=401,
@@ -109,7 +111,8 @@ class ChannelController extends Controller
         *          ),
         *      @OA\Response(
         *          response=200,
-        *          description="Successful operation"
+        *          description="Successful operation",
+        *          @OA\JsonContent(ref="#/components/schemas/youtube_video")
         *       ),
         *      @OA\Response(
         *          response=401,
